# owid-grapher

./: .babelrc  .bundlemonrc.json  .bundlewatch.config.json  .clinerules  .cursorignore  .dev.vars.example  .devcontainer-personal-setup.example.sh  .editorconfig  .env  .env-bluehost  .env.archive  .env.devcontainer  .env.example  .env.example-full  .env.example-grapher  .env.travis  .enzymeSetup.ts  .eslintignore  .eslintrc.cjs  .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .gitpod.yml  .lando.yml  .netlify  .oxfmtrc.json  .oxlintrc.json  .oxlintrc.jsonc  .pinact.yaml  .prettierignore  .readthedocs.yaml  .rsync-filter  .rsync-ignore  .rsyncexclude  .sublime-project  .travis.install-mysql-5.7.sh  .travis.yml  .yarnrc.yml  1733503871571-AddPageviewsUrlIndex.ts  (+99 more)
db/: csv.ts  (+49 more)
docs/: Makefile  Official OWID AchieML Gdocs documentation.md  architecture.md  before-you-start-on-windows.md  browser-support.md  chart-api.md  chart-api.openapi.yaml  claude-code-web.md  coding-style.md  component-reference-admin-mockup.html  component-reference-admin-plan.md  components-reference.generated.md  components.registry.generated.json  contributing.md  devcontainer-setup.md  docker-compose-mysql.md  dumbbell-chart-type-checklist.md  email-notifications-plan.md  express-to-hono-migration.md  full-wordpress-setup.md  gdoc-migrations.md  gdocs-agent-cms.md  google-tag-manager.md  grapher-admin-server.md  imports-diagram.md  index.md  local-database-setup.md  local-docker-setup.md  local-typescript-setup.md  missing-data-in-entity-selector.md  population-simulation-iframe-embed-plan.md  (+7 more)
(+6652 files in other folders)
